tests/crablangdoc-ui/feature-gate-doc_cfg_hide.stderr
error[E0658]: `#[doc(cfg_hide)]` is experimental
  --> $DIR/feature-gate-doc_cfg_hide.rs:1:1
   |
LL | #![doc(cfg_hide(test))]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #43781 <https://github.com/crablang/crablang/issues/43781> for more information
   = help: add `#![feature(doc_cfg_hide)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
